localization fully inplemented Theme changer trial purpages but not fully inplemented, akta issue bad e baki sob mutamuti complete insha allah otaw fix korbo

--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -1,3 +1,96 @@
 {
-"titletext1" : "আপনার চারপাশে সেরা\nখাবার খুঁজে পেতে দিন"
+"titletext1" : "আপনার চারপাশে সেরা\nখাবার খুঁজে পেতে দিন",
+
+"findbycategory" : "বিভাগ দ্বারা খুঁজুন",
+
+"seeall" : "সবগুলো দেখ",
+
+"yourlocation" : "তোমার অবস্থান",
+
+"yourlocation1" : "শিবুয়া, জাপান",
+
+"remen" : "রেমেন",
+
+"burger" : "বার্গার",
+
+"salad" : "সালাদ",
+
+"walfe" : "ওয়ালফ",
+
+"sapporomiso" : "সাপোরো মিসো",
+
+"home" : "বাড়ি",
+
+"messaging" : "মেসেজিং",
+
+"category" : "ক্যাটেগরি",
+
+"profile" : "প্রোফাইল",
+
+"mstitile" : "Food_chain\nগ্রাহক পরিষেবাতে স্বাগতম",
+
+"msname" : "রাহুল রেজা",
+
+"msactive" : "অনলাইন",
+
+"mstime" : "কাজের সময়: সকাল 6.00টা থেকে রাত 9.00টা GMT+6",
+
+"msnum" : "+658486605 (হোয়াটসঅ্যাপ)",
+
+"mshint" : "চ্যাট",
+
+"mssms" : "বেশি সমস্যা মনে হলে Whatsapp Massage করুন নম্বার 01919084813। অডার করার পর 5-20 মিনিট এর মাঝে Live Chat করুন। কোন সমস্যা ছাড়া অযখা মেসেজ দিবেন না। যদি কোন কারণ ছাড়া মেসেজ দিন তাহলে আপনার Live Chat বন্ধ হয়ে যেতে পারে।",
+
+"psprofile" : "প্রোফাইল",
+
+"pspro" : "ফজ",
+
+"psname" : "ফয়সাল জোয়ার্দার",
+
+"psbalance" : "ভারসাম্য: ",
+
+"psbamount" : "1000",
+
+"pspoint" : "পয়েন্ট:",
+
+"pspamount" : "376",
+
+"pspayement" : "পেমেন্ট:",
+
+"psopayment" : "ব্যাঙ্ক/এমএফএস/কার্ড/ক্রিপ্টো",
+
+"pshs" : "সাহায্য সহযোগীতা",
+
+"pssp" : "নিরাপত্তা এবং গোপনীয়তা",
+
+"dname" : "ফয়সাল জোয়ার্দার",
+
+"drf" : "বন্ধুদের উল্লেখ করুন",
+
+"dbav" : "একটি যানবাহন বুক করুন",
+
+"dmb" : "আমার বুকিং",
+
+"dpro" : "প্রোফাইল",
+
+"dpay" : "পেমেন্ট",
+
+"dgb" : "উপহার এবং বোনাস",
+
+"dp1" : "প্রশ্ন আছে?",
+
+"dp2" : "সেবা সম্পর্কে",
+
+"dp3" : "ব্যবহারের শর্তাবলী",
+
+"dt1" : "হালকা থিম",
+
+"dt2" : "ডার্ক থিম",
+
+"dt3" : "সিস্টেম থিম",
+
+"db1" : "সুপার ইউজার হয়ে উঠুন",
+
+"db2" : "একটি ডিজাইন দিয়ে অর্থ উপার্জন করুন"
+
 }
